# rs-handlegraph

./: Cargo.toml  build.rs  cbindgen.toml  readme.md
src/: algorithm.rs  algorithms.rs  consensus.rs  construction.rs  conversion.rs  disjoint.rs  graph.rs  handle.rs  handlegraph.rs  hashgraph.rs  lib.rs  mutablehandlegraph.rs  packed.rs  packedgraph.rs  path_position.rs  pathgraph.rs  pathhandlegraph.rs  util.rs
src/algorithm/: unchop.rs
src/algorithms/: unchop.rs
src/handlegraph/: iter.rs
src/hashgraph/: graph.rs  node.rs  path.rs
src/packed/: deque.rs  flexpaged.rs  paged.rs  robust.rs  traits.rs  vector.rs
src/packedgraph/: defragment.rs  edges.rs  graph.rs  index.rs  iter.rs  nodes.rs  occurrences.rs  paths.rs  quickcheck.rs  sequence.rs
src/packedgraph/index/: list.rs
src/packedgraph/paths/: occurrences.rs  packedpath.rs  properties.rs
src/packedgraph/quickcheck/: delta.rs  ops.rs  traits.rs
src/packedgraph/sequence/: encodings.rs
src/pathhandlegraph/: embedded_paths.rs  occurrences.rs  path.rs  step.rs
src/util/: test.rs  validate.rs
tests/: gfa.rs  hashgraph.rs
tests/gfas/: A-3105.gfa.test  DRB3-3125.smooth.gfa.test  L-3139.gfa.test  MICA-100507436.sort.gfa.test
