[package]
name = "handlegraph"
version = "0.5.0"
authors = ["christian <christian@chfi.se>"]
edition = "2018"
license = "MIT"
description = "Library for use in variation graphs"
repository = "https://github.com/chfi/rs-handlegraph"
readme = "readme.md"
keywords = ["bioinformatics", "parser", "graph"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa = "0.8"
bstr = "0.2"
bio = "0.32"
fnv = "1.0"
succinct = "0.5"
