[package]
name = "handlegraph"
version = "0.6.0"
authors = ["Christian Fischer <christian@chfi.se>"]
edition = "2018"
license = "MIT"
description = "Library for use in variation graphs"
repository = "https://github.com/chfi/rs-handlegraph"
readme = "readme.md"
keywords = ["bioinformatics", "parser", "graph"]
categories = ["science"]


[dependencies]
gfa = "0.9"
fnv = "1.0"
succinct = "0.5"
rayon = "1.5"
crossbeam-channel = "0.5"
anyhow = "1.0"
# ena = "0.14.0"
red_union_find = "0.3.0"
boomphf = "0.5.8"

[dev-dependencies]
quickcheck = "0.9"
bstr = "0.2"
