[package]
name = "handlegraph"
version = "0.7.0-alpha.9"
authors = ["Christian Fischer <christian@chfi.se>"]
edition = "2018"
license = "MIT"
description = "Library for use in variation graphs"
repository = "https://github.com/chfi/rs-handlegraph"
readme = "readme.md"
keywords = ["bioinformatics", "parser", "graph"]
categories = ["science"]


[dependencies]
gfa = "0.10"
fnv = "1.0"
succinct = "0.5"
rayon = "1.5"
crossbeam-channel = "0.5"
anyhow = "1.0"
boomphf = "0.5.8"
bstr = "0.2"
log = "0.4"

[dev-dependencies]
quickcheck = "0.9"
rand = "0.7"
